--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -105,36 +105,36 @@ AudiencePage_numberOf = insgesamt
 
 AudiencePage_numberOfFiles = Dateien:
 
-Basket_lblRemoveSelected = ENTFERNEN
+Basket_lblRemoveSelected = AUS ABLAGE ENTFERNEN
 
 #
 # Bread Crumb Navigation
 #
 BreadCrumb_info = Aktionen:
 
-BrowseByChooseInitial = Anfangsbuchstabe
+BrowseByChooseInitial = W\u00E4hle Anfangsbuchstabe
 
-BrowseByChooseYear = Jahr
+BrowseByChooseYear = W\u00E4hle Jahr
 
 BrowseByCreator = Personen
 
-BrowseByCreatorDesc = Personennamen und Zugriff auf die entsprechenden Datens\u00E4tze.
+BrowseByCreatorDesc = Browsen nach Personennamen und Zugriff auf die entsprechenden Datens\u00E4tze.
 
-BrowseByInitial = Anfangsbuchstabe
+BrowseByInitial = Anfangsbuchstabe:
 
 BrowseByOrg = Organisationen
 
-BrowseByOrgDesc = Organisationseinheiten und Zugriff auf die entsprechenden Datens\u00E4tze.
+BrowseByOrgDesc = Browsen nach Organisationseinheiten und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 BrowseByPage = Browse
 
-BrowseBySelect = Browse By
+BrowseBySelect = W\u00E4hle Browse By
 
 BrowseBySubject = Schlagw\u00F6rter
 
-BrowseByYear = Jahr
+BrowseByYear = Browse By Jahr
 
-BrowseByYearDesc = Jahresangaben und Zugriff auf die entsprechenden Datens\u00E4tze.
+BrowseByYearDesc = Browsen nach Jahresangaben und Zugriff auf die entsprechenden Datens\u00E4tze.
 
 #
 #CartItemsPage
@@ -144,7 +144,7 @@ CartItemsPage = Ablage
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Arbeitsbereiche
+ChooseWorkspacePage = Arbeitsbereich ausw\u00E4hlen
 
 CollaboratorPage = Collaborator
 
@@ -152,7 +152,7 @@ CollaboratorPage_group = Gruppe
 
 CollaboratorPage_modify = \u00C4nderungen erlauben
 
-CreateItemPage = Collections
+CreateItemPage = Collection ausw\u00E4hlen
 
 CreateNewRevision_ChooseCollection = Bitte w\u00E4hlen Sie eine Collection aus, indem Sie auf den Namen selbiger klicken.
 
@@ -534,9 +534,13 @@ ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = mit Dateien oder ext. Ref.
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = nur mit Datei(en) 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = [NEW] mit Datei(en) 
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = nur mit ext. Ref.
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = nur mit Datei(en) 
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = [NEW] mit ext. Ref.
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = nur mit ext. Ref.
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = ohne Dateien und ext. Ref.
 
@@ -864,7 +868,7 @@ ItemListSortingOrder_SORTORDER_DESCENDING = absteigend
 
 ItemList_Details = Listendetails
 
-ItemList_ObjectsPerPage = Treffer
+ItemList_ObjectsPerPage = Treffer je Seite
 
 ItemList_Results = Ergebnisse
 
@@ -873,7 +877,7 @@ ItemList_Show = Zeige
 #
 # ItemList
 #
-ItemList_SortBy = Nach
+ItemList_SortBy = Sortierung nach
 
 ItemList_SortOrderAscending = aufsteigend
 
@@ -887,13 +891,13 @@ ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer verworfen)
 
 ItemList_of = von
 
-List_MedView = Mehr (alle)
+List_MedView = Mittlere Ansicht (alle Datens\u00E4tze)
 
 List_SelectItem = Selektieren
 
 List_ShortView = Kurzansicht (alle Datens\u00E4tze)
 
-List_lblAddToBasket = IN ABLAGE
+List_lblAddToBasket = ZUR ABLAGE HINZUF\u00DCGEN
 
 List_lblBibList = Bibliographisch
 
@@ -905,13 +909,13 @@ List_lblFilterOptions = FILTER
 
 List_lblGo = Los
 
-List_lblGoToPage = Seite
+List_lblGoToPage = Gehe zu Seite
 
-List_lblGridList = Tabelle
+List_lblGridList = Tabellarisch
 
 List_lblPage = Seite
 
-List_lblRevision = Revisionen
+List_lblRevision = Revisionen:
 
 List_lblSelectItem = Ausw\u00E4hlen
 
@@ -933,13 +937,13 @@ List_lkNext = N\u00E4chste
 
 List_lkNone = Keine
 
-List_lkPrevious = Zur\u00FCck
+List_lkPrevious = Vorhergehende
 
 List_lkShow = Anschauen
 
 List_lkToggleAll = Auswahl umkehren\u0009
 
-LocalTagsPage = Tags bearbeiten
+LocalTagsPage = Lokale Tags bearbeiten
 
 LoginErrorPage = Login Status
 
@@ -949,7 +953,7 @@ MultipleImport_configuration = Import Konfiguration
 
 NewMultipleImport = Massenimport
 
-NoSearchResultListPage = Keine Treffer
+NoSearchResultListPage = keine Treffer
 
 NoSearchResultsPage = Keine Treffer
 
@@ -1007,13 +1011,13 @@ SearchResultList_lblNoHits = 0 Treffer
 #
 # SearchResultList
 #
-SearchResultList_lblSortBy = Nach
+SearchResultList_lblSortBy = Sortieren nach
 
 SearchResultList_lblSortOrderAsc = aufsteigend
 
 SearchResultList_lblSortOrderDesc = absteigend
 
-SearchResultList_lblSortedBy = nach
+SearchResultList_lblSortedBy = sortiert nach
 
 Search_lblShowHide = einblenden/ausblenden
 
@@ -1061,17 +1065,17 @@ ViewItemFull_btnFileSection = Dateien
 
 ViewItemFull_btnItemRevisions = Revisionen
 
-ViewItemFull_btnItemStatistics = Statistik
+ViewItemFull_btnItemStatistics = Statistiken
 
-ViewItemFull_btnItemVersions = Historie
+ViewItemFull_btnItemVersions = Freigabegeschichte
 
-ViewItemFull_btnItemView = Details
+ViewItemFull_btnItemView = Ansehen
 
 ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAbstractLanguage = Sprache des Abstracts
 
-ViewItemFull_lblAddToBasket = In Ablage
+ViewItemFull_lblAddToBasket = Zur Ablage hinzuf\u00FCgen
 
 ViewItemFull_lblAffiliations = Affiliations
 
@@ -1081,9 +1085,9 @@ ViewItemFull_lblAlternativeTitle = Alternativer Titel
 
 ViewItemFull_lblBasic = Basisdaten
 
-ViewItemFull_lblCiteItemAs = Lesezeichen setzen
+ViewItemFull_lblCiteItemAs = Lesezeichen zu diesem Datensatz setzen
 
-ViewItemFull_lblCreateItemFromTemplate = Als Vorlage
+ViewItemFull_lblCreateItemFromTemplate = Als Vorlage verwenden
 
 ViewItemFull_lblCreator = Urheber
 
@@ -1097,7 +1101,7 @@ ViewItemFull_lblDateCreated = Erstellt,
 
 ViewItemFull_lblDateModified = Ge\u00E4ndert, 
 
-ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht,
+ViewItemFull_lblDatePublishedInPrint = Im Druck ver\u00F6ffentlicht, 
 
 ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht, 
 
@@ -1129,7 +1133,7 @@ ViewItemFull_lblFileFullTxtSearchHits = Suchtreffer im Volltext
 
 ViewItemFull_lblFileLicense = Lizenz
 
-ViewItemFull_lblFileLicenseShow = Lizenz in neuem Fenster.
+ViewItemFull_lblFileLicenseShow = Lizenz in neuem Fenster anzeigen.
 
 ViewItemFull_lblFileMimeTypeSize = MIME-Typ / Gr\u00F6\u00DFe
 
@@ -1149,7 +1153,7 @@ ViewItemFull_lblGenre = Genre
 
 ViewItemFull_lblHasRevision = Revision
 
-ViewItemFull_lblHideGroup = ausblenden
+ViewItemFull_lblHideGroup = ausblenden:
 
 ViewItemFull_lblIdentifiers = Identifikatoren
 
@@ -1217,7 +1221,7 @@ ViewItemFull_lblRollbackConfirm = Sollen die bestehenden Daten wirklich mit dies
 
 ViewItemFull_lblSaveFulltext = Speichern
 
-ViewItemFull_lblShowGroup = einblenden
+ViewItemFull_lblShowGroup = einblenden:
 
 ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
 
@@ -1295,6 +1299,8 @@ ViewItemFull_lblWithdrawalDate = Datum des Verwerfens
 ViewItemFull_lblWithdrawn = Verworfen
 
 ViewItemFull_lblnameOfCollection = Name der Collection
+
+ViewItemFull_lblnameOfCreator = [NEW]Besitzer
 
 #
 #ViewItemLog
@@ -1748,7 +1754,7 @@ adv_search_btRemove = Formular l\u00F6schen
 
 adv_search_btShowMore = mehr..
 
-adv_search_btStart = Suchen
+adv_search_btStart = Suche starten
 
 adv_search_fileComponentAvailability = Dateien & ext. Ref.
 
@@ -1981,7 +1987,7 @@ chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
 
 chooseWorkspace_lnkQAWorkspace = QA Bereich
 
-chooseWorkspace_lnkReportWorkspace = T\u00E4tigkeitsbericht Bereich
+chooseWorkspace_lnkReportWorkspace = T\u00E4tigkeitsbericht
 
 chooseWorkspace_lnkYearbookWorkspace = Jahrbuch Bereich
 
@@ -2215,7 +2221,7 @@ event_title_alternative = Alternativer Titel
 #
 export_btDisplay = Anzeigen
 
-export_btDownload = Download
+export_btDownload = Runterladen
 
 export_btEMail = E-Mail 
 
@@ -2397,9 +2403,9 @@ mainMenu_lblCart = ABLAGE
 
 mainMenu_lblMyWorkspace = Deposit
 
-mainMenu_lblQA = Qualit\u00E4tssicherung
+mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
-mainMenu_lblSubmission = EINGABE
+mainMenu_lblSubmission = DATENEINGABE
 
 mainMenu_lnkBlog = Blog
 
@@ -2416,7 +2422,7 @@ mainMenu_lnkHelp = Hilfe
 #
 mainMenu_lnkHome = START
 
-mainMenu_lnkPolicy = Leitfaden
+mainMenu_lnkPolicy = Leitlinien&Impressum
 
 mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
@@ -2482,7 +2488,7 @@ qaws_lblMultipleImportTags = Import Name
 
 qaws_lblOrgUnitSelection = Organisation
 
-quick_search_btnStart = Suchen
+quick_search_btnStart = Los
 
 remove = Entfernen
 
@@ -2493,16 +2499,16 @@ restrictive_message = Restriktiv:
 
 save = Speichern
 
-search_btSearch = Suche
+search_btSearch = Los
 
-search_lblAdvancedSearch = Erweitert
+search_lblAdvancedSearch = Detailsuche
 
 search_lblAdvancedSearch_noresults = Erweiterte Suche
 
 #
 # Search
 #
-search_lblIncludeFiles = Volltexte
+search_lblIncludeFiles = Volltexte einbinden
 
 search_lblSearch = Suche nach freigegebenen Datens\u00E4tzen
 
@@ -2588,7 +2594,7 @@ submission_lblDescription = Beschreibung
 
 submission_lblMoreDetails = (mehr)
 
-submission_lblSubmissionStart = Methode
+submission_lblSubmissionStart = Eingabemethode
 
 submission_lnkEasySubmission = Einfach
 
@@ -2599,6 +2605,8 @@ submission_lnkImportWorkspace = Import Bereich
 submission_lnkMultipleImport = Massenimport
 
 submission_lnkNewSubmission = Detailliert
+
+test = =
 
 #
 # Title
