--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -104,36 +104,36 @@ AudiencePage_numberOf = total
 
 AudiencePage_numberOfFiles = Files:
 
-Basket_lblRemoveSelected = REMOVE
+Basket_lblRemoveSelected = REMOVE FROM BASKET
 
 #
 # Bread Crumb Navigation
 #
 BreadCrumb_info = Actions:
 
-BrowseByChooseInitial = Initial
+BrowseByChooseInitial = Choose Initial
 
-BrowseByChooseYear = Year
+BrowseByChooseYear = Choose Year
 
 BrowseByCreator = Persons
 
-BrowseByCreatorDesc = Person names and view the corresponding items.
+BrowseByCreatorDesc = Browse by person names and view the corresponding items.
 
-BrowseByInitial = Initial
+BrowseByInitial = Initial:
 
 BrowseByOrg = Organizations
 
-BrowseByOrgDesc = Organizational unit names and view the corresponding items.
+BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
 
 BrowseByPage = Browse
 
-BrowseBySelect = Browse By
+BrowseBySelect = Choose Browse By
 
 BrowseBySubject = Subjects
 
-BrowseByYear = Year
+BrowseByYear = Browse By Year
 
-BrowseByYearDesc = Year and view the corresponding items.
+BrowseByYearDesc = Browse by year and view the corresponding items.
 
 #
 #CartItemsPage
@@ -143,7 +143,7 @@ CartItemsPage = Basket
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Workspaces
+ChooseWorkspacePage = Choose Workspace
 
 CollaboratorPage = Collaborator
 
@@ -151,7 +151,7 @@ CollaboratorPage_group = Group
 
 CollaboratorPage_modify = enable modification
 
-CreateItemPage = Collections 
+CreateItemPage = Choose Collection 
 
 CreateNewRevision_ChooseCollection = Please choose a collection by clicking on the name of the collection.
 
@@ -533,9 +533,13 @@ ENUM_REVIEWMETHOD_PEER = Peer
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = with file(s) or locator(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = [NEW] with file(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = with file(s) only
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = [NEW] with locator(s)
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_only = with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = without files and locators
 
@@ -863,7 +867,7 @@ ItemListSortingOrder_SORTORDER_DESCENDING = descending
 
 ItemList_Details = List Details
 
-ItemList_ObjectsPerPage = items
+ItemList_ObjectsPerPage = items per page
 
 ItemList_Results = Results
 
@@ -872,7 +876,7 @@ ItemList_Show = Showing
 #
 # ItemList
 #
-ItemList_SortBy = By
+ItemList_SortBy = Sort by
 
 ItemList_SortOrderAscending = ascending
 
@@ -886,13 +890,13 @@ ItemList_filterAllExceptWithdrawn = All (except discarded)
 
 ItemList_of = of
 
-List_MedView = More (all)
+List_MedView = Medium View (all Items)
 
 List_SelectItem = Select Item
 
 List_ShortView = Short View (All Items)
 
-List_lblAddToBasket = ADD TO BASKET
+List_lblAddToBasket = ADD SELECTED TO BASKET
 
 List_lblBibList = Bibliographic List
 
@@ -904,13 +908,13 @@ List_lblFilterOptions = FILTER
 
 List_lblGo = Go
 
-List_lblGoToPage = Page
+List_lblGoToPage = Go to page
 
 List_lblGridList = Table View
 
 List_lblPage = Page
 
-List_lblRevision = Revisions
+List_lblRevision = Revisions:
 
 List_lblSelectItem = Select Item
 
@@ -938,7 +942,7 @@ List_lkShow = Show
 
 List_lkToggleAll = Toggle all
 
-LocalTagsPage = Edit Tags
+LocalTagsPage = Edit Local Tags
 
 LoginErrorPage = Login state
 
@@ -1006,13 +1010,13 @@ SearchResultList_lblNoHits = 0 Hits
 #
 # SearchResultList
 #
-SearchResultList_lblSortBy = By
+SearchResultList_lblSortBy = Sort by
 
 SearchResultList_lblSortOrderAsc = ascending
 
 SearchResultList_lblSortOrderDesc = descending
 
-SearchResultList_lblSortedBy = by
+SearchResultList_lblSortedBy = sorted by
 
 Search_lblShowHide = show/hide
 
@@ -1062,9 +1066,9 @@ ViewItemFull_btnItemRevisions = Revisions
 
 ViewItemFull_btnItemStatistics = Statistics
 
-ViewItemFull_btnItemVersions = History
+ViewItemFull_btnItemVersions = Release History
 
-ViewItemFull_btnItemView = Details
+ViewItemFull_btnItemView = View
 
 ViewItemFull_lblAbstract = Abstract
 
@@ -1082,7 +1086,7 @@ ViewItemFull_lblBasic = Basic
 
 ViewItemFull_lblCiteItemAs = Bookmark this item
 
-ViewItemFull_lblCreateItemFromTemplate = As template
+ViewItemFull_lblCreateItemFromTemplate = Use item as template
 
 ViewItemFull_lblCreator = Creator
 
@@ -1128,7 +1132,7 @@ ViewItemFull_lblFileFullTxtSearchHits = Fulltext Search Hits
 
 ViewItemFull_lblFileLicense = License
 
-ViewItemFull_lblFileLicenseShow = Open license in new window.
+ViewItemFull_lblFileLicenseShow = Open license in a new window.
 
 ViewItemFull_lblFileMimeTypeSize = MIME-Type / Size
 
@@ -1297,6 +1301,8 @@ ViewItemFull_lblWithdrawalDate = Date of Discard
 ViewItemFull_lblWithdrawn = Discarded
 
 ViewItemFull_lblnameOfCollection = Name of Collection
+
+ViewItemFull_lblnameOfCreator = [NEW]Owner
 
 #
 #ViewItemLog
@@ -1747,7 +1753,7 @@ adv_search_btRemove = Remove Form
 
 adv_search_btShowMore = more..
 
-adv_search_btStart = Search
+adv_search_btStart = Start Search
 
 adv_search_fileComponentAvailability = Files & Locators
 
@@ -2484,7 +2490,7 @@ qaws_lblMultipleImportTags = Import Name
 
 qaws_lblOrgUnitSelection = Organizational Unit
 
-quick_search_btnStart = Search
+quick_search_btnStart = Go
 
 remove = Remove
 
@@ -2495,9 +2501,9 @@ restrictive_message = Restrictive:
 
 save = Save
 
-search_btSearch = Search
+search_btSearch = Go
 
-search_lblAdvancedSearch = Advanced
+search_lblAdvancedSearch = Advanced Search
 
 search_lblAdvancedSearch_noresults = Advanced Search
 
@@ -2590,7 +2596,7 @@ submission_lblDescription = Description
 
 submission_lblMoreDetails = (more)
 
-submission_lblSubmissionStart = Method
+submission_lblSubmissionStart = Submission Method
 
 submission_lnkEasySubmission = Easy
 
