--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -514,7 +514,11 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = con fichero(s)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = con fichero(s)
 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = [NEW] with file(s) only
+
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = con localizadores 
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = [NEW] with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = sin fichero (s)
 
@@ -1280,6 +1284,8 @@ ViewItemFull_lblWithdrawalDate = Fecha de retirada
 ViewItemFull_lblWithdrawn = Retirado
 
 ViewItemFull_lblnameOfCollection = Nombre de la Colecci\u00F3n
+
+ViewItemFull_lblnameOfCreator = [NEW]Owner
 
 #
 #ViewItemLog
