--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -516,7 +516,11 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30E
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = [NEW] with file(s) only
+
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = \u95A2\u9023URL\u3042\u308A
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = [NEW] with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
@@ -1269,6 +1273,8 @@ ViewItemFull_lblWithdrawalDate = \u53D6\u308A\u4E0B\u3052\u65E5
 ViewItemFull_lblWithdrawn = \u53D6\u308A\u4E0B\u3052
 
 ViewItemFull_lblnameOfCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
+
+ViewItemFull_lblnameOfCreator = [NEW]Owner
 
 #
 #ViewItemLog
