--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -290,7 +290,7 @@ basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass 
 #
 basket_MultipleAddedSuccessfully = $1 Datens\u00E4tze wurden in die Ablage gelegt.
 
-basket_MultipleAlreadyInBasket = $1 die selektierten Datens\u00E4tze sind bereits in der Ablage.
+basket_MultipleAlreadyInBasket = $1 der selektierten Datens\u00E4tze sind bereits in der Ablage.
 
 basket_NoItems = Die Ablage ist leer.
 
