--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -68,7 +68,7 @@ AffiliationDetailSuccessors = Nachfolgeorganisationen
 
 AffiliationSearchResultListPage = Suchergebnisse
 
-AffiliationTreePage = Browse By Organisation
+AffiliationTreePage = Organisation
 
 AffiliationTree_lnkDescription = Beschreibung
 
@@ -81,7 +81,7 @@ AffiliationTree_txtEmail = E-Mail
 
 AffiliationTree_txtFax = Fax
 
-AffiliationTree_txtHeadline = Browse By Organisation
+AffiliationTree_txtHeadline = Organisation
 
 AffiliationTree_txtHeadlineDetails = Organisationsdetails
 
@@ -132,7 +132,7 @@ BrowseBySelect = W\u00E4hle Browse By
 
 BrowseBySubject = Schlagw\u00F6rter
 
-BrowseByYear = Browse By Jahr
+BrowseByYear = Jahr
 
 BrowseByYearDesc = Browsen nach Jahresangaben und Zugriff auf die entsprechenden Datens\u00E4tze.
 
@@ -144,7 +144,7 @@ CartItemsPage = Ablage
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Arbeitsbereich ausw\u00E4hlen
+ChooseWorkspacePage = Arbeitsbereiche
 
 CollaboratorPage = Collaborator
 
@@ -152,7 +152,7 @@ CollaboratorPage_group = Gruppe
 
 CollaboratorPage_modify = \u00C4nderungen erlauben
 
-CreateItemPage = Collection ausw\u00E4hlen
+CreateItemPage = Collections
 
 CreateNewRevision_ChooseCollection = Bitte w\u00E4hlen Sie eine Collection aus, indem Sie auf den Namen selbiger klicken.
 
@@ -585,7 +585,7 @@ EasySubmission = Einfache Eingabe
 
 EasySubmissionPage = Einfache Eingabe
 
-EasySubmission_lblFetchMetadata = Abholen/Import
+EasySubmission_lblFetchMetadata = Import
 
 EasySubmission_lblImportMetadata = Import
 
@@ -832,7 +832,7 @@ Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisati
 #
 Feed_Recent_Releases = Neu PubMan Eintr\u00E4ge
 
-FetchMetadataPage = Abholen/Import
+FetchMetadataPage = Import
 
 #
 # Orientierungstexts (Sub-Header)
@@ -868,7 +868,7 @@ ItemListSortingOrder_SORTORDER_DESCENDING = absteigend
 
 ItemList_Details = Listendetails
 
-ItemList_ObjectsPerPage = Treffer je Seite
+ItemList_ObjectsPerPage = je Seite
 
 ItemList_Results = Ergebnisse
 
@@ -891,11 +891,11 @@ ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer verworfen)
 
 ItemList_of = von
 
-List_MedView = Mittlere Ansicht (alle Datens\u00E4tze)
+List_MedView = Alle aufklappen
 
 List_SelectItem = Selektieren
 
-List_ShortView = Kurzansicht (alle Datens\u00E4tze)
+List_ShortView = Alle zuklappen
 
 List_lblAddToBasket = ZUR ABLAGE HINZUF\u00DCGEN
 
@@ -907,9 +907,9 @@ List_lblExportOptions = EXPORT
 
 List_lblFilterOptions = FILTER
 
-List_lblGo = Los
+List_lblGo = Suchen
 
-List_lblGoToPage = Gehe zu Seite
+List_lblGoToPage = Seite
 
 List_lblGridList = Tabellarisch
 
@@ -933,11 +933,11 @@ List_lkLess = Weniger
 
 List_lkMore = Mehr
 
-List_lkNext = N\u00E4chste
+List_lkNext = Vor
 
 List_lkNone = Keine
 
-List_lkPrevious = Vorhergehende
+List_lkPrevious =Zurück
 
 List_lkShow = Anschauen
 
@@ -996,7 +996,7 @@ SearchResultList_btnSortItemList = Datens\u00E4tze sortieren
 
 SearchResultList_hits = Treffer
 
-SearchResultList_lblAdvancedSearch = Erneute Suche
+SearchResultList_lblAdvancedSearch = Suche verfeinern
 
 SearchResultList_lblBack = Zur\u00FCck
 
@@ -1026,7 +1026,7 @@ ShowQuery = Zeige Suchabfrage
 #
 # Submission
 #
-SubmissionPage = Start der Dateneingabe
+SubmissionPage = Start der Eingabe
 
 SubmitItemPage = Datensatz einstellen/freigeben
 
@@ -1065,11 +1065,11 @@ ViewItemFull_btnFileSection = Dateien
 
 ViewItemFull_btnItemRevisions = Revisionen
 
-ViewItemFull_btnItemStatistics = Statistiken
+ViewItemFull_btnItemStatistics = Statistik
 
 ViewItemFull_btnItemVersions = Freigabegeschichte
 
-ViewItemFull_btnItemView = Ansehen
+ViewItemFull_btnItemView = Details
 
 ViewItemFull_lblAbstract = Zusammenfassung
 
@@ -1268,7 +1268,7 @@ ViewItemFull_lblSubHeaderItem = Genre:
 
 ViewItemFull_lblSubHeaderLegalCase = Entscheidung
 
-ViewItemFull_lblSubHeaderLocalTags = Lokale Tags
+ViewItemFull_lblSubHeaderLocalTags = Tags
 
 ViewItemFull_lblSubHeaderLocators = Externe Referenzen
 
@@ -1478,11 +1478,11 @@ ViewItemShort_lblShow = Anschauen
 #
 #ViewItemStatistics Page
 #
-ViewItemStatisticsPage = Statistiken
+ViewItemStatisticsPage = Statistik
 
 ViewItem_btnBackToList1 = |<< zur\u00FCck zur Liste
 
-ViewItem_btnDownload = Herunterladen...
+ViewItem_btnDownload = Download...
 
 ViewItem_lblAbstract1 = Zusammenfassung:
 
@@ -1633,7 +1633,7 @@ ViewItem_lnkTocLess = zuklappen
 
 ViewItem_lnkTocMore = aufklappen...
 
-ViewLocalTagsPage = lokaler Tag
+ViewLocalTagsPage = Tag
 
 WithdrawItemPage = Datensatz verwerfen
 
@@ -1718,7 +1718,7 @@ actionMenu_lnkDelete = L\u00F6schen
 
 actionMenu_lnkEdit = Bearbeiten
 
-actionMenu_lnkEditLocalTags = Lokale Tags bearbeiten
+actionMenu_lnkEditLocalTags = Tags bearbeiten
 
 actionMenu_lnkModify = \u00C4ndern
 
@@ -1730,7 +1730,7 @@ actionMenu_lnkReleaseFromEasySubmission = Freigeben
 
 actionMenu_lnkRevise = Zum Bearbeiten schicken
 
-actionMenu_lnkSubmission = Dateneingabe
+actionMenu_lnkSubmission = Eingabe
 
 actionMenu_lnkSubmit = Einstellen
 
@@ -1786,7 +1786,7 @@ adv_search_lbHeaderIdent = Identifikator
 
 adv_search_lbHeaderLanguage = Sprache der Publikation
 
-adv_search_lbHeaderLocalTag = Lokaler Tag
+adv_search_lbHeaderLocalTag = Tag
 
 adv_search_lbHeaderOrgan = Organisation
 
@@ -1795,7 +1795,7 @@ adv_search_lbHeaderPerson = Person
 adv_search_lbHeaderSource = Quelle
 
 #Headers
-adv_search_lbHeaderWoP = Wort oder Ausdruck
+adv_search_lbHeaderWoP = Suchbegriffe
 
 #Genre (deprecated)
 adv_search_lblChkGenre = Genres
@@ -2159,7 +2159,7 @@ easy_submission_lblOrganization = Organisation
 
 easy_submission_lblPleaseUploadFiles = Bitte laden Sie die gew\u00FCnschten Dateien hoch.
 
-easy_submission_lblProvideID = Von Datenquelle abholen
+easy_submission_lblProvideID = Von Server
 
 easy_submission_lblPublicationLanguage = Sprache der Publikation
 
@@ -2221,7 +2221,7 @@ event_title_alternative = Alternativer Titel
 #
 export_btDisplay = Anzeigen
 
-export_btDownload = Runterladen
+export_btDownload = Download
 
 export_btEMail = E-Mail 
 
@@ -2405,7 +2405,7 @@ mainMenu_lblMyWorkspace = Deposit
 
 mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
-mainMenu_lblSubmission = DATENEINGABE
+mainMenu_lblSubmission = EINGABE
 
 mainMenu_lnkBlog = Blog
 
@@ -2422,7 +2422,7 @@ mainMenu_lnkHelp = Hilfe
 #
 mainMenu_lnkHome = START
 
-mainMenu_lnkPolicy = Leitlinien&Impressum
+mainMenu_lnkPolicy = Impressum
 
 mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
@@ -2503,12 +2503,12 @@ search_btSearch = Los
 
 search_lblAdvancedSearch = Detailsuche
 
-search_lblAdvancedSearch_noresults = Erweiterte Suche
+search_lblAdvancedSearch_noresults = Erweitert
 
 #
 # Search
 #
-search_lblIncludeFiles = Volltexte einbinden
+search_lblIncludeFiles = Volltexte
 
 search_lblSearch = Suche nach freigegebenen Datens\u00E4tzen
 
@@ -2565,7 +2565,7 @@ statistics_lblDownloads = Downloads
 
 statistics_lblFile = von
 
-statistics_lblHeader = Statistiken f\u00FCr:
+statistics_lblHeader = Statistik f\u00FCr:
 
 statistics_lblInfo = Die Statistiken werden einmal t\u00E4glich aktualisiert.
 
@@ -2578,7 +2578,7 @@ styleTheme_lblHighContrast = kontrastreich
 #STYLE THEMES
 styleTheme_lblPubMan = PubMan
 
-submission_descEasySubmission = \u00DCber die einfache Dateneingabe k\u00F6nnen Sie schrittweise Ihren Datensatz beschreiben. Am Ende der Eingabe haben Sie die M\u00F6glichkeit entweder den Datensatz abzuspeichern oder in die ausf\u00FChrliche Eingabemaske zu wechseln um weitere Angaben zu machen.
+submission_descEasySubmission = \u00DCber die einfache Eingabe k\u00F6nnen Sie schrittweise Ihren Datensatz beschreiben. Am Ende der Eingabe haben Sie die M\u00F6glichkeit entweder den Datensatz abzuspeichern oder in die ausf\u00FChrliche Eingabemaske zu wechseln um weitere Angaben zu machen.
 
 submission_descImport = Diese Funktion bietet zum einen den Import einer Datei, die einen BibTeX Eintrag enth\u00E4lt, zum anderen kann man hier Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
 
