--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -1819,6 +1819,12 @@ export_lblSimpleExport = Export:
 
 faq = FAQ
 
+import_workspace_delete_items = [NEW] L\u00F6scht alle importierten Publikationen aus diesem Importvorgang sofern sie noch nicht freigegeben wurden. Die Informationen zum Importvorgang bleiben erhalten.
+
+import_workspace_remove_import = [NEW] Entfernt die Informationen zu diesem Importvorgang im Importbereich und im QA Bereich. Importierte Publikationen bleiben erhalten.
+
+import_workspace_submit_release_items = [NEW] Gibt alle Publikationen dieses Importvorgangs frei. Die Publikationen k\u00F6nnen hinterher nicht mehr gel\u00F6scht werden.
+
 #
 # Messages
 #
