--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -1783,6 +1783,12 @@ export_lblSimpleExport = Exportar:
 
 faq = FAQ
 
+import_workspace_delete_items = [NEW] Deletes all publications of this import as long as there are not already released. The import's information will be preserved.
+
+import_workspace_remove_import = [NEW] Removes information regarding this import in the import workspace and in the QA workspace. Imported publications will be preserved.
+
+import_workspace_submit_release_items = [NEW] Releases all publications of this import. These publications cannot be deleted afterwards.
+
 #
 # Messages
 #
