New version run issues New genre meeting abstracts
Former-commit-id: bcf5644b05c8537fe29be9515048e58f4317e049

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -369,6 +369,8 @@ ENUM_GENRE_MANUAL = Leitfaden
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
 
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+
 #
 # Jus-specific Source genres
 #
@@ -937,7 +939,7 @@ List_lkNext = Vor
 
 List_lkNone = Keine
 
-List_lkPrevious =Zurück
+List_lkPrevious = Zur\u00FCck
 
 List_lkShow = Anschauen
 
@@ -1853,6 +1855,8 @@ adv_search_lblChkGenre_issue = Sonderheft
 adv_search_lblChkGenre_journal = Zeitschrift
 
 adv_search_lblChkGenre_manuscript = Manuskript
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monografie
 
