--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -330,7 +330,7 @@ ENUM_GENRE_COLLECTED_EDITION = Collected Edition
 
 ENUM_GENRE_COMMENTARY = Commentary 
 
-ENUM_GENRE_CONFERENCE_PAPER = Conference Paper 
+ENUM_GENRE_CONFERENCE_PAPER = Conference Paper
 
 ENUM_GENRE_CONFERENCE_REPORT = Conference report
 
@@ -367,6 +367,8 @@ ENUM_GENRE_JOURNAL = Journal
 ENUM_GENRE_MANUAL = Manual
 
 ENUM_GENRE_MANUSCRIPT = Manuscript
+
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
 
 #
 # Jus-specific Source genres
@@ -539,7 +541,7 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = with file(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = [NEW] with locator(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_only = with locator(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = [NEW] with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = without files and locators
 
@@ -1852,6 +1854,8 @@ adv_search_lblChkGenre_issue = Special Journal Issue
 adv_search_lblChkGenre_journal = Journal
 
 adv_search_lblChkGenre_manuscript = Manuscript
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monograph
 
