--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -324,7 +324,7 @@ ENUM_GENRE_COLLECTED_EDITION = Obra Colectiva
 
 ENUM_GENRE_COMMENTARY = Comentario 
 
-ENUM_GENRE_CONFERENCE_PAPER = Presentaciones a Congresos 
+ENUM_GENRE_CONFERENCE_PAPER = Presentaciones a Congresos
 
 ENUM_GENRE_CONFERENCE_REPORT = Informe de Conferencia
 
@@ -355,6 +355,8 @@ ENUM_GENRE_JOURNAL = Revista
 ENUM_GENRE_MANUAL = Gu\u00EDa 
 
 ENUM_GENRE_MANUSCRIPT = Manuscrito
+
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
 
 ENUM_GENRE_MONOGRAPH = Monograf\u00EDa 
 
@@ -1801,6 +1803,8 @@ adv_search_lblChkGenre_issue = N\u00FAmero especial
 adv_search_lblChkGenre_journal = Revista
 
 adv_search_lblChkGenre_manuscript = Manuscrito
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_other = Otro
 
