--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -356,6 +356,8 @@ ENUM_GENRE_MANUAL = \u30DE\u30CB\u30E5\u30A2\u30EB
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
 
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+
 ENUM_GENRE_MONOGRAPH = \u30E2\u30CE\u30B0\u30E9\u30D5
 
 ENUM_GENRE_MULTI_VOLUME = Multi-Volume
@@ -1824,6 +1826,8 @@ adv_search_lblChkGenre_issue = \u7279\u96C6\u53F7
 adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = \u30E2\u30CE\u30B0\u30E9\u30D5
 
