--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -212,6 +212,8 @@ ENUM_GENRE_JOURNAL = Zeitschrift
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
 
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+
 ENUM_GENRE_OTHER = Sonstige
 
 ENUM_GENRE_PAPER = Forschungspapier
@@ -1480,6 +1482,8 @@ adv_search_lblChkGenre_issue = Sonderheft
 adv_search_lblChkGenre_journal = Zeitschrift
 
 adv_search_lblChkGenre_manuscript = Manuskript
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monografie
 
