--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -212,6 +212,8 @@ ENUM_GENRE_JOURNAL = Journal
 
 ENUM_GENRE_MANUSCRIPT = Manuscript
 
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+
 ENUM_GENRE_OTHER = Other
 
 ENUM_GENRE_PAPER = Working Paper
@@ -1480,6 +1482,8 @@ adv_search_lblChkGenre_issue = Special Journal Issue
 adv_search_lblChkGenre_journal = Journal
 
 adv_search_lblChkGenre_manuscript = Manuscript
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_monogaph = Monograph
 
