--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -210,6 +210,8 @@ ENUM_GENRE_JOURNAL = Revista
 
 ENUM_GENRE_MANUSCRIPT = Manuscrito
 
+ENUM_GENRE_MEETING_ABSTRACT = [NEW] Meeting Abstract
+
 ENUM_GENRE_OTHER = Otro
 
 ENUM_GENRE_PAPER = Documento de Trabajo
@@ -1449,6 +1451,8 @@ adv_search_lblChkGenre_issue = N\uFFFDmero Especial
 adv_search_lblChkGenre_journal = Revista
 
 adv_search_lblChkGenre_manuscript = Manuscrito
+
+adv_search_lblChkGenre_meetingabstract = [NEW] Meeting Abstract
 
 adv_search_lblChkGenre_other = Otro
 
