--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1270,7 +1270,7 @@ ViewItemFull_lblSubHeaderItem = Genre:
 
 ViewItemFull_lblSubHeaderLegalCase = Entscheidung
 
-ViewItemFull_lblSubHeaderLocalTags = Tags
+ViewItemFull_lblSubHeaderLocalTags = Lokale Tags
 
 ViewItemFull_lblSubHeaderLocators = Externe Referenzen
 
@@ -1635,7 +1635,7 @@ ViewItem_lnkTocLess = zuklappen
 
 ViewItem_lnkTocMore = aufklappen...
 
-ViewLocalTagsPage = Tag
+ViewLocalTagsPage = Lokale Tags
 
 WithdrawItemPage = Datensatz verwerfen
 
@@ -1720,7 +1720,7 @@ actionMenu_lnkDelete = L\u00F6schen
 
 actionMenu_lnkEdit = Bearbeiten
 
-actionMenu_lnkEditLocalTags = Tags bearbeiten
+actionMenu_lnkEditLocalTags = Lokale Tags bearbeiten
 
 actionMenu_lnkModify = \u00C4ndern
 
@@ -1788,7 +1788,7 @@ adv_search_lbHeaderIdent = Identifikator
 
 adv_search_lbHeaderLanguage = Sprache der Publikation
 
-adv_search_lbHeaderLocalTag = Tag
+adv_search_lbHeaderLocalTag = Lokaler Tag
 
 adv_search_lbHeaderOrgan = Organisation
 
@@ -2426,7 +2426,7 @@ mainMenu_lnkHelp = Hilfe
 #
 mainMenu_lnkHome = START
 
-mainMenu_lnkPolicy = Impressum
+mainMenu_lnkPolicy = Leitlinien&Impressum
 
 mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
