--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -67,7 +67,7 @@ AffiliationDetailSuccessors = Organization successors
 
 AffiliationSearchResultListPage = Search Results
 
-AffiliationTreePage = Browse By Organization
+AffiliationTreePage = Organization
 
 AffiliationTree_lnkDescription = Description
 
@@ -80,7 +80,7 @@ AffiliationTree_txtEmail = E-Mail
 
 AffiliationTree_txtFax = Fax
 
-AffiliationTree_txtHeadline = Browse By Organization
+AffiliationTree_txtHeadline = Organization
 
 AffiliationTree_txtHeadlineDetails = Organization Description
 
@@ -131,7 +131,7 @@ BrowseBySelect = Choose Browse By
 
 BrowseBySubject = Subjects
 
-BrowseByYear = Browse By Year
+BrowseByYear = Year
 
 BrowseByYearDesc = Browse by year and view the corresponding items.
 
@@ -143,7 +143,7 @@ CartItemsPage = Basket
 #
 # Choose Workspace
 #
-ChooseWorkspacePage = Choose Workspace
+ChooseWorkspacePage = Workspaces
 
 CollaboratorPage = Collaborator
 
@@ -151,7 +151,7 @@ CollaboratorPage_group = Group
 
 CollaboratorPage_modify = enable modification
 
-CreateItemPage = Choose Collection 
+CreateItemPage = Collections
 
 CreateNewRevision_ChooseCollection = Please choose a collection by clicking on the name of the collection.
 
@@ -541,7 +541,7 @@ ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES_ONLY = with file(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = [NEW] with locator(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = [NEW] with locator(s) only
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS_ONLY = with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = without files and locators
 
@@ -586,7 +586,7 @@ EasySubmission = Easy Submission
 
 EasySubmissionPage = Easy Submission
 
-EasySubmission_lblFetchMetadata = Fetch/Import
+EasySubmission_lblFetchMetadata = Import
 
 EasySubmission_lblImportMetadata = Import
 
@@ -833,7 +833,7 @@ Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit
 #
 Feed_Recent_Releases = Recent Releases
 
-FetchMetadataPage = Fetch/Import
+FetchMetadataPage = Import
 
 #
 # Orientierungstexts (Sub-Header)
@@ -869,7 +869,7 @@ ItemListSortingOrder_SORTORDER_DESCENDING = descending
 
 ItemList_Details = List Details
 
-ItemList_ObjectsPerPage = items per page
+ItemList_ObjectsPerPage = per page
 
 ItemList_Results = Results
 
@@ -892,11 +892,11 @@ ItemList_filterAllExceptWithdrawn = All (except discarded)
 
 ItemList_of = of
 
-List_MedView = Medium View (all Items)
+List_MedView = Expand all
 
 List_SelectItem = Select Item
 
-List_ShortView = Short View (All Items)
+List_ShortView = Collapse all
 
 List_lblAddToBasket = ADD SELECTED TO BASKET
 
@@ -908,9 +908,9 @@ List_lblExportOptions = EXPORT
 
 List_lblFilterOptions = FILTER
 
-List_lblGo = Go
+List_lblGo = Search
 
-List_lblGoToPage = Go to page
+List_lblGoToPage = Page
 
 List_lblGridList = Table View
 
@@ -1027,7 +1027,7 @@ ShowQuery = Show Query
 #
 # Submission
 #
-SubmissionPage = Choose Submission Method
+SubmissionPage = Start submission
 
 SubmitItemPage = Submit/Release Item
 
@@ -1070,7 +1070,7 @@ ViewItemFull_btnItemStatistics = Statistics
 
 ViewItemFull_btnItemVersions = Release History
 
-ViewItemFull_btnItemView = View
+ViewItemFull_btnItemView = Details
 
 ViewItemFull_lblAbstract = Abstract
 
@@ -1796,7 +1796,7 @@ adv_search_lbHeaderPerson = Person
 adv_search_lbHeaderSource = Source
 
 #Headers
-adv_search_lbHeaderWoP = Word or Phrase
+adv_search_lbHeaderWoP = Search terms
 
 #Genre
 adv_search_lblChkGenre = Genres
@@ -2162,7 +2162,7 @@ easy_submission_lblOrganization = Organization
 
 easy_submission_lblPleaseUploadFiles = Please Upload Files.
 
-easy_submission_lblProvideID = Fetch from Source
+easy_submission_lblProvideID = From 
 
 easy_submission_lblPublicationLanguage = Language of Publication
 
@@ -2571,7 +2571,7 @@ statistics_lblDownloads = Downloads
 
 statistics_lblFile = of 
 
-statistics_lblHeader = Statistics for Item: 
+statistics_lblHeader = Statistics for: 
 
 statistics_lblInfo = The statistic data is updated on a daily basis.
 
